force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_TN_TM_SM__c.field-meta.xml
<CustomField>
    <fullName>breg_TN_TM_SM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TN/TM/SM</label>
    <referenceTo>breg_TN_TM_SM__c</referenceTo>
    <relationshipLabel>Account Affiliations</relationshipLabel>
    <relationshipName>breg_Account_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>