force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_To_Remove__c.field-meta.xml
<CustomField>
    <fullName>breg_To_Remove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Remove</label>
    <type>Checkbox</type>
</CustomField>