force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Transaction__c.field-meta.xml
<CustomField>
    <fullName>breg_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-1355</description>
    <label>Transaction</label>
    <referenceTo>breg_Transaction__c</referenceTo>
    <relationshipLabel>Account Affiliations</relationshipLabel>
    <relationshipName>breg_Account_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>