force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Type__c</fullName>
    <description>Aalta BREG-59</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Entity</fullName>
            </value>
            <value>
                <fullName>CRA</fullName>
                <label>Commercial Registered Agent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>