force-app/main/default/objects/breg_Account_Affiliation__c/fields/breg_Visible_On_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_Visible_On_Case__c</fullName>
    <formula>IF(
    NOT(breg_To_Remove__c),
    TRUE,
    OR(
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-AG-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-CONS-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-DC-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-DNP-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-FC-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-FLLC-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-FLLP-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-FLP-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-GP-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-LLC-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-LLP-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-LP-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-PC-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-SBC-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ANN-SOLE-1&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ODC&quot;),
        ISPICKVAL(breg_Case__r.breg_Form_Code__c, &quot;ADD-MEMBER&quot;)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visible On Case</label>
    <type>Checkbox</type>
</CustomField>